syntax = "proto3";

option csharp_namespace = "ZodiacServer";

package zodiac;


service StarSignService {
  rpc GetStarSignRequest (CalendarDate) returns (StarSignResponse);
}

message CalendarDate {
  string day = 1;
  string month = 2;
  string year = 3;
}

message StarSignResponse {
  StarSign starSign = 1;
}

enum StarSign {
   UNDEFINED = 0;
   VARSATOR = 1;
   PESTI = 2;
   BERBEC = 3;
   TAUR = 4;
   GEMENI = 5;
   RAC = 6;
   LEU = 7;
   FECIOARA = 8;
   BALANTA = 9;
   SCORPION = 10;
   SAGETATOR = 11;
   CAPRICORN = 12;
}
